fixed some wording and spacing

--- a/client/src/components/registerForm/style.css
+++ b/client/src/components/registerForm/style.css
@@ -1,5 +1,2 @@
 .form {
-	padding: 10px 20px;
-	min-height: 100%;
-	width: 100%;
 }
