--- a/client/src/routes/register/style.css
+++ b/client/src/routes/register/style.css
@@ -9,6 +9,5 @@
 }
 
 .main {
-	align-content: center;
-	width: 25%;
+
 }
