--- a/client/src/routes/signin/style.css
+++ b/client/src/routes/signin/style.css
@@ -9,6 +9,4 @@
 }
 
 .main {
-	align-content: center;
-	width: 25%;
 }
